Added wildcard support, tests, comments

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
             }
         },
         {
-            "label": "build",
+            "label": "Build",
             "type": "shell",
             "command": "./build.ps1 -Task Build",
             "group": {
